# c_darwin_active_app

./: .gitignore  .gitmodules  Makefile  meson.build
active-app/: active-app.c  active-app.h  meson.build
active-app-module-test/: active-app-module-test.c  meson.build
active-app-test/: active-app-test.c  active-app-test.h  meson.build
app-utils/: app-utils.c  app-utils.h  meson.build
app-utils-test/: app-utils-test.c  app-utils-test.h  meson.build
window-utils/: meson.build  window-utils.c  window-utils.h
window-utils-test/: meson.build  window-utils-test.c  window-utils-test.h
